fixed navbar z-index in p-text

--- a/src/App.scss
+++ b/src/App.scss
@@ -83,7 +83,7 @@
     text-align: left;
     color: var(--gray-color);
     line-height: 1.5;
-    z-index: 4;
+    z-index: 1;
   
     @media screen and (min-width: 2000px) {
       font-size: 1.75rem;
