--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -88,7 +88,7 @@
     height: 35px;
     border-radius: 50%;
     position: relative;
-  
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,7 +106,7 @@
       top: 0;
       bottom: 0;
       right: 0;
-      z-index: 5;
+      z-index: 100;
   
       padding: 1rem;
   
